[bumpversion]
current_version = 2021.07.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:socketscpi/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[metadata]
name = socketscpi
version = 2021.07.0
author = Morgan Allison
author_email = morgan.allison@keysight.com
description = socketscpi provides a robust SCPI interface to electronic test and measurement equipment via raw socket protocol, removing the requirement for VISA and improving data transfer speed over VXI-11.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/morgan-at-keysight/socketscpi
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir = 
packages = find:
python_requires = >=3.6
install_requires = 
    numpy

[bdist_wheel]
universal = 1

[flake8]
exclude = docs, .git, __pycache__, build, setup.py